--- a/GroceryShoppingCart/Views/Drinks/Index.cshtml
+++ b/GroceryShoppingCart/Views/Drinks/Index.cshtml
@@ -46,9 +46,9 @@ else
 
             <th><a asp-action="Index" class="glyphicon glyphicon-refresh"></a></th>
 
-            <th><a asp-action="Index" asp-route-sortOrder=@ViewData["SortTitle"]>Add/Delete/Modify</a></th>
+            <th><a asp-action="Index" asp-route-sortOrder=@ViewData["SortTitle"]>Delete/Modify</a></th>
             <th> </th>
-            <th><a asp-action="Index" asp-route-searchString="@ViewData["CurrentFilter"]" asp-route-sortOrder=@ViewData["SortDescription"]> Description</a></th>
+            <th><a asp-action="Index" asp-route-searchString="@ViewData["CurrentFilter"]" asp-route-sortOrder=@ViewData["SortDescription"]> Sort Drinks </a></th>
             @*<th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>*@
