Updated Search functionality

--- a/GroceryShoppingCart/Views/Drinks/Index.cshtml
+++ b/GroceryShoppingCart/Views/Drinks/Index.cshtml
@@ -22,11 +22,11 @@ else
 }
 
 
-<h2>Index</h2>
+<h2>Drinks</h2>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
