Completed Unit and integrated tests

--- a/GroceryShoppingCart/Views/Shared/_Layout.cshtml
+++ b/GroceryShoppingCart/Views/Shared/_Layout.cshtml
@@ -34,8 +34,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Fruit" asp-action="Index">Fruit</a></li>
                     <li><a asp-area="" asp-controller="Drinks" asp-action="Index">Drinks</a></li>
-                    <li><a asp-area="" asp-controller="Vegetables" asp-action="Index">Vegetables</a></li>
+                    @*<li><a asp-area="" asp-controller="Vegetables" asp-action="Index">Vegetables</a></li>*@
                     <li><a asp-area="" asp-controller="Grain" asp-action="Index">Grain</a></li>
+                    @*<li><a asp-area="" asp-controller="Meat" asp-action="Index">Meat</a></li>*@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
